syntax = "proto3";
package notificationproto;

option go_package = "grpcstreaming/notificationproto";

service NotificationService {
    rpc GetNotification(NotificationRequest) returns (stream Notification){}
}

message NotificationRequest{
    string user_id = 1;
}

message Notification{
    string user_id = 1;
    string content = 2;
    int64 created_at = 3;
}